fixing padding on mobile

--- a/travel.css
+++ b/travel.css
@@ -128,6 +128,7 @@ img {
 	padding-left: 3%;
 	padding-right: 3%;
 	padding-bottom: 5%;
+	padding-top: 5%;
 }
 
 .inner-project-box{
